[metadata]
name = piot
version = 0.0.1
author = newb1er
author_email = 32424677+newb1er@users.noreply.github.com
description = A framework for IoT project running on Raspberry Pi
url = https://github.com/newb1er/piot
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
